--- a/dashboard.html
+++ b/dashboard.html
@@ -1,30 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MWF Dashboard - Furniture Gallery</title>
-    <link rel="stylesheet" href="mystyle.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="..//css/mystyle.css">
 </head>
 <body>
-<h1> MWF Ltd Dashboard</h1>
-<h2>Dining chair collections</h2>
-<img src="https://assets.wfcdn.com/im/22187896/compr-r85/2624/262475491/drea-solid-wood-dining-chairs-traditional-rustic-farmhouse-kitchen-kitchen-chairs.jpg" style="width: 200px; height: 200px; border-radius: 50%;">
-<h3>Morden Rustic Dining Chairs</h3>
-<img src="https://images.thdstatic.com/productImages/99bc1209-0559-4ec3-a720-4f5e269a2046/svn/dark-natural-leisuremod-dining-chairs-rc20lbr-64_1000.jpg" style="width: 200px; height: 200px; border-radius: 50%;">
-<h3>Oak Accent Chair</h3>
-<img src="https://www.daals.com/cdn/shop/products/DCH-007-NAT-BEIGEFAB-2P_main.jpg?v=1683732040" style="width: 200px; height: 200px; border-radius: 50%;">
-<h3>Beech Wood Dining Chairs</h3>
-<img src="https://gvawood.com/cdn/shop/files/Instagram_Instagram_1080x448_._Instagram_-2023-08-30T131831.712.png?v=1738832980&width=2835" style="width: 200px; height: 200px; border-radius: 50%;">
-<h3>Nordic Solid Wood Dining Chair</h3>
- <h2>Office chair Collection</h2>
- <img src="https://m.media-amazon.com/images/I/51VRb7TN8YL._UF894%2C1000_QL80_.jpg"style="width: 200px; height: 200px; border-radius: 50%;"> 
- <h3>Wooden office chair</h3> 
- <img src="https://s3.dutchcrafters.com/product-images/600-600/pid_76519-Amish-Made-Build-Your-Own-Solid-Wood-Desk-Chair--10.jpg"style="width: 200px; height: 200px; border-radius: 50%;">
- <h3>Wooden office chair</h3> 
- <img src="https://dutchcraftfurniture.com/cdn/shop/files/Kinglet_Desk_Chair_with_Wood_Seat_-_Rustic_Hickory-Michael_s_Cherry.jpg?v=1734039060"style="width: 200px; height: 200px; border-radius: 50%;"> 
- <h3>Wooden office chair</h3> 
- <img src="https://www.officechairsunlimited.com/cdn/shop/files/work-smart-medium-oak-finish-wood-visitors-chair-wd380-40350413127928_1200x1200.jpg?v=1711730981"style="width: 200px; height: 200px; border-radius: 50%;"> 
- <h3>Polished Oak</h3>
+    <nav>
+        <ul class="links">
+            <li><a href="dashboard.html">Dashboard</a></li>
+            <li><a href="users.html">Users</a></li>
+            <li><a href="Sales.html"> Sales</a></li>
+            <li><a href="customers.html">Customers</a></li>
+            <li><a href="suppliers.html">Suppliers</a></li>
+            
+        </ul>
+    </nav><br><br>
+    <div class="card-group">
+
+
+  <div class="card">
+    <img src="pexels-andreaedavis-2829030.jpg" class="card-img-top" alt="..." style="height: 300px; object-fit: cover;">
+    <div class="card-body">
+      <h5 class="card-title">Elegant Sofa Set</h5>
+      <p class="card-text">This stylish dining chairs adds comfort and charm to any room with its modern design and quality finish.<br><br> 500,000[UGX]</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+
+
+  <div class="card">
+    <img src="pexels-pixabay-373541.jpg" class="card-img-top" alt="Cupboard" style="height: 300px; object-fit: cover;">
+    <div class="card-body">
+      <h5 class="card-title">Classic Wooden Cupboard</h5>
+      <p class="card-text">Spacious and beautifully crafted cupboard suitable for home or office storage.<br><br> 800,000[UGX]</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 5 mins ago</small>
+    </div>
+  </div>
+
+  
+  <div class="card">
+    <img src="pexels-andreaedavis-2881752.jpg" class="card-img-top" alt="Dining Table" style="height: 300px; object-fit: cover;">
+    <div class="card-body">
+      <h5 class="card-title">6-Seater Dining Table</h5>
+      <p class="card-text">Perfect for family meals and gatherings, this dining table combines durability with design.<br><br> 1,500,000[UGX].10% discount on payment</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 10 mins ago</small>
+    </div>
+  </div>
+
+</div>
+
+<br>
+
+<div class="card-group">
+
+
+  <div class="card">
+    <img src="pexels-asphotograpy-94865.jpg" class="card-img-top" alt="..." style="height: 300px; object-fit: cover;">
+    <div class="card-body">
+      <h5 class="card-title">Solid Timber Poles</h5>
+      <p class="card-text">High-quality cupboard for modern homes and large families. <br><br>1,000,000[UGX]</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 12 mins ago</small>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="pexels-fotios-photos-1957478.jpg" class="card-img-top" alt="..." style="height: 300px; object-fit: cover;">
+    <div class="card-body">
+      <h5 class="card-title">Office Desk</h5>
+      <p class="card-text">A sleek, ergonomic office desk suitable for work-from-home and office setups.<br><br> 500,000[UGX]</p>
+    </div>
+    <div class="card footer">
+      <small class="text-muted">Last updated 15 mins ago</small>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="pexels-karlsolano-2883049.jpg" class="card-img-top" alt="..." style="height: 300px; object-fit: cover;">
+    <div class="card-body">
+      <h5 class="card-title">Double Bed Frame</h5>
+      <p class="card-text">A spacious book shelf good for offices and libries.,br><br><br> 300,000[UGX] 5% discount on payment</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 20 mins ago</small>
+    </div>
+  </div>
+</div>  
+   <footer>
+    &copy; Mayondo Wood & Furniture Ltd. All rights reserved.
+ </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
 </html>
