--- a/index.html
+++ b/index.html
@@ -7,52 +7,57 @@
     <title> Mayondo Wood and Furniture Ltd</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-        <link rel="stylesheet" href="CSS/mystyle.css">
-      <img src="just-me (2).png" style="width: 200px; height: 200px; border-radius: 50%;">  
-     <section class="vh-100" style="background-color: #508bfc;">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-        <div class="card shadow-2-strong" style="border-radius: 1rem;">
-          <div class="card-body p-5 text-center">
+    <link rel="stylesheet" href="CSS/mystyle.css">
+    <img src="just-me (2).png" style="width: 200px; height: 200px; border-radius: 50%;">
+    <section class="vh-100" style="background-image: url(istockphoto-529920277-1024x1024.jpg);">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+                    <div class="card shadow-2-strong" style="border-radius: 1rem;">
+                        <div class="card-body p-5 text-center">
 
-            <h3 class="mb-5">Sign in</h3>
+                            <h3 class="mb-5">Sign in</h3>
 
-            <div data-mdb-input-init class="form-outline mb-4">
-              <input type="email" id="typeEmailX-2" class="form-control form-control-lg" />
-              <label class="form-label" for="typeEmailX-2">Email</label>
+                            <div data-mdb-input-init class="form-outline mb-4">
+                                <input type="email" id="typeEmailX-2" class="form-control form-control-lg" />
+                                <label class="form-label" for="typeEmailX-2">Email</label>
+                            </div>
+
+                            <div data-mdb-input-init class="form-outline mb-4">
+                                <input type="password" id="typePasswordX-2" class="form-control form-control-lg" />
+                                <label class="form-label" for="typePasswordX-2">Password</label>
+                            </div>
+
+                        
+                            <div class="form-check d-flex justify-content-start mb-4">
+                                <input class="form-check-input" type="checkbox" value="" id="form1Example3" />
+                                <label class="form-check-label" for="form1Example3"> Remember password </label>
+                            </div>
+                            <a href="dashboard.html">
+
+                                <button data-mdb-button-init data-mdb-ripple-init
+                                    class="btn btn-primary btn-lg btn-block" type="submit">Login</button></a>
+
+                            <hr class="my-4">
+
+                            <button data-mdb-button-init data-mdb-ripple-init class="btn btn-lg btn-block btn-primary"
+                                style="background-color: aquamarine;" type="submit"><i class="fab fa-google me-2"></i>
+                                Sign
+                                in with google</button><br><br>
+                            <button data-mdb-button-init data-mdb-ripple-init
+                                class="btn btn-lg btn-block btn-primary mb-2" style="background-color: cyan;"
+                                type="submit"><i class="fab fa-facebook-f me-2"></i>Sign in with facebook</button>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-            <div data-mdb-input-init class="form-outline mb-4">
-              <input type="password" id="typePasswordX-2" class="form-control form-control-lg" />
-              <label class="form-label" for="typePasswordX-2">Password</label>
-            </div>
-
-            <!-- Checkbox -->
-            <div class="form-check d-flex justify-content-start mb-4">
-              <input class="form-check-input" type="checkbox" value="" id="form1Example3" />
-              <label class="form-check-label" for="form1Example3"> Remember password </label>
-            </div>
-
-            <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
-
-            <hr class="my-4">
-
-            <button data-mdb-button-init data-mdb-ripple-init class="btn btn-lg btn-block btn-primary" style="background-color: #dd4b39;"
-              type="submit"><i class="fab fa-google me-2"></i> Sign in with google</button>
-            <button data-mdb-button-init data-mdb-ripple-init class="btn btn-lg btn-block btn-primary mb-2" style="background-color: #3b5998;"
-              type="submit"><i class="fab fa-facebook-f me-2"></i>Sign in with facebook</button>
-
-          </div>
         </div>
-      </div>
-    </div>
-  </div>
-</section>
-                   
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-            crossorigin="anonymous"></script>
-</body>
-
+    </section>
+    <footer class="bg-[black] text-white text-center p-4 mt-12">
+        &copy; 2025 Mayondo Wood & Furniture Ltd. All rights reserved.
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
+    </body>
 </html>
