--- a/Sales.html
+++ b/Sales.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MWF Ltd-sales Page</title>
-    <link rel="stylesheet" href="..//CSS/mystyle.css">
+    <link rel="stylesheet" href="CSS/mystyle.css">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 min-h-screen">
