--- a/suppliers.html
+++ b/suppliers.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Company Suppliers</title>
-    <link rel="stylesheet" href="../CSS/mystyle.css">
+    <link rel="stylesheet" href="CSS/mystyle.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>     
 <body class="bg-gray-100 py-10">
