--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>MWF Ltd | Customers</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="CSS/mystyle.css">
+  <link rel="stylesheet" href="/CSS/mystyle.css">
 </head>
 <body>
     <nav>
