--- a/dashboard.html
+++ b/dashboard.html
@@ -1,104 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>MWF Ltd | Customers</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MWF Ltd | Customers</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="./CSS/mystyle.css">
+  <link rel="stylesheet" href="CSS/mystyle.css">
 </head>
+
 <body>
-    <nav>
-        <ul class="links">
-            <li><a href="dashboard.html">Dashboard</a></li>
-            <li><a href="users.html">Users</a></li>
-            <li><a href="Sales.html"> Sales</a></li>
-            <li><a href="customers.html">Customers</a></li>
-            <li><a href="suppliers.html">Suppliers</a></li>
-            
-        </ul>
-    </nav><br><br>
-    <div class="card-group">
+  <nav>
+    <ul class="links">
+      <li><a href="dashboard.html">Dashboard</a></li>
+      <li><a href="users.html">Users</a></li>
+      <li><a href="Sales.html"> Sales</a></li>
+      <li><a href="customers.html">Customers</a></li>
+      <li><a href="suppliers.html">Suppliers</a></li>
+
+    </ul>
+  </nav><br><br>
+  <div class="card-group">
 
 
-  <div class="card">
-    <img src="pexels-andreaedavis-2829030.jpg" class="card-img-top" alt="..." style="height: 300px; object-fit: cover;">
-    <div class="card-body">
-      <h5 class="card-title">Elegant Sofa Set</h5>
-      <p class="card-text">This stylish dining chairs adds comfort and charm to any room with its modern design and quality finish.<br><br> 500,000[UGX]</p>
+    <div class="card">
+      <img src="pexels-andreaedavis-2829030.jpg" class="card-img-top" alt="..."
+        style="height: 300px; object-fit: cover;">
+      <div class="card-body">
+        <h5 class="card-title">Elegant Sofa Set</h5>
+        <p class="card-text">This stylish dining chairs adds comfort and charm to any room with its modern design and
+          quality finish.<br><br> 500,000[UGX]</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
     </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
+
+
+    <div class="card">
+      <img src="pexels-pixabay-373541.jpg" class="card-img-top" alt="Cupboard"
+        style="height: 300px; object-fit: cover;">
+      <div class="card-body">
+        <h5 class="card-title">Classic Wooden Cupboard</h5>
+        <p class="card-text">Spacious and beautifully crafted cupboard suitable for home or office storage.<br><br>
+          800,000[UGX]</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 5 mins ago</small>
+      </div>
     </div>
+
+
+    <div class="card">
+      <img src="pexels-andreaedavis-2881752.jpg" class="card-img-top" alt="Dining Table"
+        style="height: 300px; object-fit: cover;">
+      <div class="card-body">
+        <h5 class="card-title">6-Seater Dining Table</h5>
+        <p class="card-text">Perfect for family meals and gatherings, this dining table combines durability with
+          design.<br><br> 1,500,000[UGX].10% discount on payment</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 10 mins ago</small>
+      </div>
+    </div>
+
   </div>
 
+  <br>
 
-  <div class="card">
-    <img src="pexels-pixabay-373541.jpg" class="card-img-top" alt="Cupboard" style="height: 300px; object-fit: cover;">
-    <div class="card-body">
-      <h5 class="card-title">Classic Wooden Cupboard</h5>
-      <p class="card-text">Spacious and beautifully crafted cupboard suitable for home or office storage.<br><br> 800,000[UGX]</p>
+  <div class="card-group">
+
+
+    <div class="card">
+      <img src="pexels-asphotograpy-94865.jpg" class="card-img-top" alt="..." style="height: 300px; object-fit: cover;">
+      <div class="card-body">
+        <h5 class="card-title">Solid Timber Poles</h5>
+        <p class="card-text">High-quality cupboard for modern homes and large families. <br><br>1,000,000[UGX]</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 12 mins ago</small>
+      </div>
     </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 5 mins ago</small>
+
+    <div class="card">
+      <img src="pexels-fotios-photos-1957478.jpg" class="card-img-top" alt="..."
+        style="height: 300px; object-fit: cover;">
+      <div class="card-body">
+        <h5 class="card-title">Office Desk</h5>
+        <p class="card-text">A sleek, ergonomic office desk suitable for work-from-home and office setups.<br><br>
+          500,000[UGX]</p>
+      </div>
+      <div class="card footer">
+        <small class="text-muted">Last updated 15 mins ago</small>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="pexels-karlsolano-2883049.jpg" class="card-img-top" alt="..." style="height: 300px; object-fit: cover;">
+      <div class="card-body">
+        <h5 class="card-title">Double Bed Frame</h5>
+        <p class="card-text">A spacious book shelf good for offices and libries.,br><br><br> 300,000[UGX] 5% discount on
+          payment</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 20 mins ago</small>
+      </div>
     </div>
   </div>
-
-  
-  <div class="card">
-    <img src="pexels-andreaedavis-2881752.jpg" class="card-img-top" alt="Dining Table" style="height: 300px; object-fit: cover;">
-    <div class="card-body">
-      <h5 class="card-title">6-Seater Dining Table</h5>
-      <p class="card-text">Perfect for family meals and gatherings, this dining table combines durability with design.<br><br> 1,500,000[UGX].10% discount on payment</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 10 mins ago</small>
-    </div>
-  </div>
-
-</div>
-
-<br>
-
-<div class="card-group">
-
-
-  <div class="card">
-    <img src="pexels-asphotograpy-94865.jpg" class="card-img-top" alt="..." style="height: 300px; object-fit: cover;">
-    <div class="card-body">
-      <h5 class="card-title">Solid Timber Poles</h5>
-      <p class="card-text">High-quality cupboard for modern homes and large families. <br><br>1,000,000[UGX]</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 12 mins ago</small>
-    </div>
-  </div>
-
-  <div class="card">
-    <img src="pexels-fotios-photos-1957478.jpg" class="card-img-top" alt="..." style="height: 300px; object-fit: cover;">
-    <div class="card-body">
-      <h5 class="card-title">Office Desk</h5>
-      <p class="card-text">A sleek, ergonomic office desk suitable for work-from-home and office setups.<br><br> 500,000[UGX]</p>
-    </div>
-    <div class="card footer">
-      <small class="text-muted">Last updated 15 mins ago</small>
-    </div>
-  </div>
-
-  <div class="card">
-    <img src="pexels-karlsolano-2883049.jpg" class="card-img-top" alt="..." style="height: 300px; object-fit: cover;">
-    <div class="card-body">
-      <h5 class="card-title">Double Bed Frame</h5>
-      <p class="card-text">A spacious book shelf good for offices and libries.,br><br><br> 300,000[UGX] 5% discount on payment</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 20 mins ago</small>
-    </div>
-  </div>
-</div>  
-   <footer>
-    &copy; Mayondo Wood & Furniture Ltd. All rights reserved.
- </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+  <footer>
+    &copy; Mayondo Wood & Furniture Ltd. All rights reserved. </footer>
 </body>
+
 </html>
